--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port = 8088
+spring.mvc.static-path-pattern=/**
+spring.mvc.servlet.path=
 
+# jdbc:mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/orders?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#mybatis.typeAliasesPackage=com.first.my.entity
+#mybatis.mapperLocations=classpath:mapper/*.xml
