--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.mvc.static-path-pattern=/**
 spring.mvc.servlet.path=
 
 # jdbc:mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/orders?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost:3306/orders?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #mybatis.typeAliasesPackage=com.first.my.entity
-#mybatis.mapperLocations=classpath:mapper/*.xml
+mybatis.mapperLocations=classpath:mapper/*.xml
